# PyJig

./: .gitignore  LICENSE  README.md  decorators.py  jigsaw.py  puzzle_info.json  pyproject.toml  requirements.txt
src/pyjig/: jigsaw.py
src/pyjigsaw/: jigsawfactory.py
