[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyjig"
version = "0.0.1"
authors = [
  { name="Tom DeAbreu", email="tomdeabreu@proton.me" },
]
description = "Package defined to create jigsaw puzzle motifs, and digital puzzle pieces."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/tomdeabreucodes/PyJig"
Issues = "https://github.com/tomdeabreucodes/PyJig/issues"