[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyjigsaw"
version = "0.1.0"
authors = [
  { name="Tom DeAbreu", email="tomdeabreu@proton.me" },
]
description = "Package defined to create jigsaw puzzle cut templates, and digital puzzle sets."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
]
dependencies=[
  "defusedxml>=0.7.1",
  "opencv_contrib_python>=4.7.0.72",
  "Pillow>=10.1.0",
  "svgpathtools>=1.6.0",
]

[project.urls]
Homepage = "https://github.com/tomdeabreucodes/PyJig"
Issues = "https://github.com/tomdeabreucodes/PyJig/issues"